--- a/404.html
+++ b/404.html
@@ -58,70 +58,6 @@
 <script src="libs/bsTable-3.3.7/bootstrapTable.js"></script>
 
 
-<style type="text/css">
-pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
-pre > code.sourceCode > span:empty { height: 1.2em; }
-.sourceCode { overflow: visible; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
-pre.sourceCode { margin: 0; }
-@media screen {
-div.sourceCode { overflow: auto; }
-}
-@media print {
-pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
-}
-pre.numberSource code
-  { counter-reset: source-line 0; }
-pre.numberSource code > span
-  { position: relative; left: -4em; counter-increment: source-line; }
-pre.numberSource code > span > a:first-child::before
-  { content: counter(source-line);
-    position: relative; left: -1em; text-align: right; vertical-align: baseline;
-    border: none; display: inline-block;
-    -webkit-touch-callout: none; -webkit-user-select: none;
-    -khtml-user-select: none; -moz-user-select: none;
-    -ms-user-select: none; user-select: none;
-    padding: 0 4px; width: 4em;
-    color: #aaaaaa;
-  }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
-div.sourceCode
-  {   }
-@media screen {
-pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
-}
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-</style>
 
 
 <link rel="stylesheet" href="style.css" type="text/css" />
@@ -315,33 +251,33 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a>
 <ul>
-<li class="chapter" data-level="0.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#learning-objectives-6"><i class="fa fa-check"></i><b>0.1</b> Learning objectives</a></li>
-<li class="chapter" data-level="0.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#introduction-3"><i class="fa fa-check"></i><b>0.2</b> Introduction</a></li>
-<li class="chapter" data-level="0.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#the-dataset"><i class="fa fa-check"></i><b>0.3</b> The dataset</a></li>
-<li class="chapter" data-level="0.4" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#data-formats-for-text-mining"><i class="fa fa-check"></i><b>0.4</b> Data formats for text-mining</a>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#learning-objectives-6"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#introduction-3"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#the-dataset"><i class="fa fa-check"></i>The dataset</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#data-formats-for-text-mining"><i class="fa fa-check"></i>Data formats for text mining</a>
 <ul>
-<li class="chapter" data-level="0.4.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tidy-text"><i class="fa fa-check"></i><b>0.4.1</b> Tidy text</a></li>
-<li class="chapter" data-level="0.4.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#document-term-matrix"><i class="fa fa-check"></i><b>0.4.2</b> Document-term matrix</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tidy-text"><i class="fa fa-check"></i>Tidy text</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#document-term-matrix"><i class="fa fa-check"></i>Document-term matrix</a></li>
 </ul></li>
-<li class="chapter" data-level="0.5" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tokenizing"><i class="fa fa-check"></i><b>0.5</b> Tokenizing</a>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tokenizing"><i class="fa fa-check"></i>Tokenizing</a>
 <ul>
-<li class="chapter" data-level="0.5.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#words"><i class="fa fa-check"></i><b>0.5.1</b> Words</a></li>
-<li class="chapter" data-level="0.5.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentences"><i class="fa fa-check"></i><b>0.5.2</b> Sentences</a></li>
-<li class="chapter" data-level="0.5.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#n-grams"><i class="fa fa-check"></i><b>0.5.3</b> N-grams</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#words"><i class="fa fa-check"></i>Words</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentences"><i class="fa fa-check"></i>Sentences</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#n-grams"><i class="fa fa-check"></i>N-grams</a></li>
 </ul></li>
-<li class="chapter" data-level="0.6" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#removing-stop-words"><i class="fa fa-check"></i><b>0.6</b> Removing stop words</a></li>
-<li class="chapter" data-level="0.7" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#stemming-and-lemmatization"><i class="fa fa-check"></i><b>0.7</b> Stemming and lemmatization</a></li>
-<li class="chapter" data-level="0.8" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency"><i class="fa fa-check"></i><b>0.8</b> Term frequency</a>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#removing-stop-words"><i class="fa fa-check"></i>Removing stop words</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#stemming-and-lemmatization"><i class="fa fa-check"></i>Stemming and lemmatization</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency"><i class="fa fa-check"></i>Term frequency</a>
 <ul>
-<li class="chapter" data-level="0.8.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#overall-term-frequency"><i class="fa fa-check"></i><b>0.8.1</b> Overall term frequency</a></li>
-<li class="chapter" data-level="0.8.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-journal"><i class="fa fa-check"></i><b>0.8.2</b> Term frequency by journal</a></li>
-<li class="chapter" data-level="0.8.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-document"><i class="fa fa-check"></i><b>0.8.3</b> Term frequency by document</a></li>
-<li class="chapter" data-level="0.8.4" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#word-clouds"><i class="fa fa-check"></i><b>0.8.4</b> Word clouds</a></li>
-<li class="chapter" data-level="0.8.5" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tf-idf"><i class="fa fa-check"></i><b>0.8.5</b> TF-IDF</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#overall-term-frequency"><i class="fa fa-check"></i>Overall term frequency</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-journal"><i class="fa fa-check"></i>Term frequency by journal</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-document"><i class="fa fa-check"></i>Term frequency by document</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#word-clouds"><i class="fa fa-check"></i>Word clouds</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tf-idf"><i class="fa fa-check"></i>TF-IDF</a></li>
 </ul></li>
-<li class="chapter" data-level="0.9" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentiment-analysis"><i class="fa fa-check"></i><b>0.9</b> Sentiment analysis</a></li>
-<li class="chapter" data-level="0.10" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#topic-modelling"><i class="fa fa-check"></i><b>0.10</b> Topic modelling</a></li>
-<li class="chapter" data-level="0.11" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#other-resources"><i class="fa fa-check"></i><b>0.11</b> Other resources</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentiment-analysis"><i class="fa fa-check"></i>Sentiment analysis</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#topic-modelling"><i class="fa fa-check"></i>Topic modelling</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#other-resources"><i class="fa fa-check"></i>Other resources</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
 <li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a></li>
