--- a/index.html
+++ b/index.html
@@ -249,7 +249,36 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#homework-5"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#learning-objectives-6"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#introduction-3"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#the-dataset"><i class="fa fa-check"></i>The dataset</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#data-formats-for-text-mining"><i class="fa fa-check"></i>Data formats for text mining</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tidy-text"><i class="fa fa-check"></i>Tidy text</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#document-term-matrix"><i class="fa fa-check"></i>Document-term matrix</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tokenizing"><i class="fa fa-check"></i>Tokenizing</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#words"><i class="fa fa-check"></i>Words</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentences"><i class="fa fa-check"></i>Sentences</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#n-grams"><i class="fa fa-check"></i>N-grams</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#removing-stop-words"><i class="fa fa-check"></i>Removing stop words</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#stemming-and-lemmatization"><i class="fa fa-check"></i>Stemming and lemmatization</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency"><i class="fa fa-check"></i>Term frequency</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#overall-term-frequency"><i class="fa fa-check"></i>Overall term frequency</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-journal"><i class="fa fa-check"></i>Term frequency by journal</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-document"><i class="fa fa-check"></i>Term frequency by document</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#word-clouds"><i class="fa fa-check"></i>Word clouds</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tf-idf"><i class="fa fa-check"></i>TF-IDF</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentiment-analysis"><i class="fa fa-check"></i>Sentiment analysis</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#topic-modelling"><i class="fa fa-check"></i>Topic modelling</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#other-resources"><i class="fa fa-check"></i>Other resources</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
 <li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a></li>
 <li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a></li>
@@ -536,7 +565,7 @@ Lab 7
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+<a href="files/assignments/info6270_lab7.Rmd">info6270_lab7.Rmd</a>
 </td>
 </tr>
 <tr>
